added tables creation and user insert
