# routes/auth.js
@@ -4,7 +4,7 @@ const MySql = require("../routes/utils/MySql");
 const DButils = require("../routes/utils/DButils");
 const bcrypt = require("bcrypt");
 
-router.post("/Register", async (req, res, next) => {
+router.post("/register", async (req, res, next) => {
   try {
     // parameters exists
     // valid parameters
@@ -30,9 +30,8 @@ router.post("/Register", async (req, res, next) => {
       parseInt(process.env.bcrypt_saltRounds)
     );
     await DButils.execQuery(
-      `INSERT INTO users VALUES ('${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
-      '${user_details.country}', '${hash_password}', '${user_details.email}')`
-    );
+      `INSERT INTO users (username, email, password, country, firstname, lastname) VALUES ('${user_details.username}', '${user_details.email}', '${hash_password}', '${user_details.country}', '${user_details.firstname}', '${user_details.lastname}')`
+    )
     res.status(201).send({ message: "user created", success: true });
   } catch (error) {
     next(error);
